--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-qrcode": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
